   + The Populate layer (and the Allow Minecraft to Populate the Entire Terrain option on the Export screen) are once again supported by Minecraft from version 1.18, so those have been re-enabled. It allows you to tell Minecraft to populate the terrain with trees, vegetation, etc. according to the painted biome
 * When Importing an existing map, or Merging with an existing map, the map directory should now be selected, rather than the level.dat file
 * Nether and End dimension changes:
   + The world type can now be configured for Nether and End dimensions
   + The Nether and End dimensions can now have Endless Borders, which will have Nether and End biomes respectively
   + The build heights of Nether and End dimensions are constrained to a low of 0 and high of 255, regardless of those of the Surface dimension, since those are the allowed build heights in those dimensions in Minecraft
 * The Custom Cave/Tunnel layer now supports setting the biome inside the cave/tunnel to a different one than the surface. This works for Minecraft 1.17 and Minecraft 1.18+
 * 32-bit height maps are now supported for both Import and Export
   + Note that they *must* be TIFF files; PNG does not support 32-bit grey scale images
   + The height map import screen has been improved to be easier to use; among other things it now offers presets to quickly set the mapping
 * The default theme no longer uses the Rock terrain type. Rock includes cobblestone, which is not Imported and caused confusion as a result. Instead it uses Stone Mix (the default underground material), which makes more sense
 * The Flood With Water, Flood With Lava and Bucket Fill tools now work on very large maps
   + They will take a very long time to fill large areas (up to ten minutes or more)
   + Undoing or redoing such large operations may also take a very long time and should not be interrupted